# ros2_ws

./: .gitignore
collision_monitor/: CMakeLists.txt  package.xml
collision_monitor/src/: collision_monitor.cpp
opencv/: CMakeLists.txt  package.xml
opencv/src/: annotating.cpp  blob.cpp  crop.cpp  edge.cpp  image_pro.cpp  read_write.cpp  threshold.cpp  video.cpp
robot/: README.docx  git-cheat-sheet.xlsx  readme.md  ros2_docker_setup.sh
robot/config/motors/: airbot.sh  gear_ratio_15.sh  gear_ratio_18.sh  gear_ratio_50.sh
robot/config/params/params_N2/: amcl.launch.xml  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  plugin.yaml
robot/config/params/params_NANO/: base_local_planner_params_close.yaml
robot/config/params/params_XU4/: amcl.launch.xml  base_local_planner_params.yaml  move_base_params.yaml
robot/config/params/params_XU4_AM/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
robot/core0_simulation/: .gitignore
robot/core0_simulation/core0_ws/src/: .gitignore
robot/core0_simulation/core0_ws/src/core0_cpp_robot/: .gitignore  CMakeLists.txt  core0_sim.sh  core0_sim_setup.sh  humble_setup_desktop.sh  package.xml
robot/core0_simulation/core0_ws/src/core0_cpp_robot/config/: ekf.yaml  jetbrain_core0_control.yaml  nav2_params.yaml  nav2_params_without_us.yaml  nav2_teb.yaml  nav2_us_range_LaserScan_fusion_params.yaml
robot/core0_simulation/core0_ws/src/core0_cpp_robot/launch/: core0.launch.py  core0_ekf.launch.py  core0_nav2.launch.py  core0_nav2_pc2_laserscan.launch.py  core0_nav2_teb.launch.py  core0_nav2_without_us.launch.py  core0_pointcloud_laserscan.launch.py  core0_slam.launch.py  core0_us_fusion_nav2.launch.py
robot/core0_simulation/core0_ws/src/core0_cpp_robot/rviz/: core0.rivz  nav2_config.rviz
robot/core0_simulation/core0_ws/src/core0_cpp_robot/src/: core0_bot.cpp  core0_us_sim.cpp  core0_us_sim.hpp  us_range_LaserScan_fusion.cpp  us_range_LaserScan_fusion.hpp
robot/core0_simulation/core0_ws/src/core0_cpp_robot/urdf/: jetbrain_core0.urdf.xacro  jetbrain_core0_gazebo_plugin.urdf.xacro  jetbrain_core0_link_joint.urdf.xacro  jetbrain_core0_materials.xacro  jetbrain_depth_sensor.urdf.xacro
robot/docker/: Dockerfile.zed.vision  docker-compose.yaml  docker_compose_install.sh
robot/docker/arm64/: Dockerfile.galactic  Dockerfile.galactic.base_control  Dockerfile.galactic.microros  Dockerfile.galactic.rplidarS2  Dockerfile.galactic.web_bridge  docker-compose.galactic_pi_oriental.yaml
robot/docker/arm64/CV/: .gitignore  cpp_object_detection_video.cpp  cpp_yolov4_bed_detect.cpp  obj.names
robot/docker/arm64/Dockerfiles/: Dockerfile.foxy.jetson  Dockerfile.foxy_arm64.micro_ros  Dockerfile.galactic.base_lidars2  Dockerfile.galactic.nav2  Dockerfile.galactic.nav2_tab  Dockerfile.galactic.zed2_with_p2l  Dockerfile.galactic.zed_jetpack4.6  Dockerfile.galactic_ros2_bridge  Dockerfile.humble  Dockerfile.humble.base_control  Dockerfile.humble.micro_ros  Dockerfile.humble.rplidarS2  Dockerfile.jetson_logger  Dockerfile.melodic.jetson  Dockerfile.ros1_bridge.jetson  Dockerfile.ros2.base_control  Dockerfile.ros2.localization  Dockerfile.ros2.micro_ros  Dockerfile.ros2.nav2_slam  Dockerfile.ros2.nav2_tune  Dockerfile.ros2.rp_lidar  Dockerfile.ros2.slam_tool_box  Dockerfile.ros2.zed_jetpack4.6  Dockerfile.ros2.zed_sdk_3.6.5  Dockerfile.zed  Dockerfile.zed_tensorrt  Dockerfile.zed_tensorrt_nano
robot/docker/arm64/cv_zed/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qr_code  qr_code.py  qr_code_video  qr_code_video_wc  qr_code_video_zed2
robot/docker/arm64/cv_zed/src/: qr_code.cpp  qr_code_video_wc.cpp  qr_code_video_zed2.cpp
robot/docker/arm64/jetson_log/: docker_viz.ipynb  jetson_logger.py  jetson_viz.ipynb  killall.sh  logger.sh
robot/docker/arm64/oakd_bed_depth_detection/: CMakeLists.txt  spatial_yolov4_bed.cpp
robot/docker/arm64/testing_compose/: docker-compose.galactic.yaml  docker-compose.galactic_afs.yaml  docker-compose.galactic_afs_nav.yaml  docker-compose.galactic_core0.yaml  docker-compose.galactic_ekf.yaml  docker-compose.galactic_nav2_tab.yaml  docker-compose.galactic_offline.yaml  docker-compose.galactic_pc2l.yaml  docker-compose.galactic_pcl.yaml  docker-compose.galactic_pi_oriental.yaml  docker-compose.galactic_pi_zd.yaml  docker-compose.yaml  (+16 more)
robot/docker/testing/: Dockerfile.foxy.ls01_lidar  Dockerfile.foxy.lsm10_lidar  Dockerfile.galactic  Dockerfile.gazebo_base  Dockerfile.ros2.eloquent_main  Dockerfile.rviz2  Dockerfile.utility  Dockerfile.zed_desktop
robot/docker/x86_64/: Dockerfile.desktop.rviz2  dl_install.sh  docker-compose.yaml  humble_setup_desktop.sh  ros2_galactic.sh  ros2_noetic.sh
robot/docker/zed/: Dockerfile  docker-compose.yaml
robot/models/modules/: afs.sh  airbot.sh  amro.sh  core0_arm.sh  default.sh  gazebo.sh  hotbot.sh
robot/ros_1/catkin_ws/src/airbot/airbot_model/: CMakeLists.txt  package.xml
robot/ros_1/catkin_ws/src/airbot/airbot_model/config/: controllers.yaml  joint_names_airbot.yaml
robot/ros_1/catkin_ws/src/airbot/airbot_model/launch/: controllers.launch  display.launch  gazebo.launch
robot/ros_1/catkin_ws/src/airbot/airbot_model/rviz/: display.rviz
robot/ros_1/catkin_ws/src/airbot/airbot_model/src/: head_joint_controller.py
robot/ros_1/catkin_ws/src/airbot/airbot_model/urdf/: _d435.urdf.xacro  airbot.gazebo  airbot.urdf  airbot.xacro
robot/ros_1/control/: .gitignore  Mul_sonar_to_laser.py  controller.py  diff_tf.py  lpid_velocity.py  m_sonar.py  motor_control.py  rotation_degree.py  sonar.py  sonar_brakes.py  statemachine.py  twist_motor.py
robot/ros_1/launch/: backup.launch  display.launch  gazebo.launch  gmapping.launch
robot/ros_1/scripts/: .gitignore  launch.sh  main.sh  mode_switch.sh  reset.sh  restart.sh  run.sh  setup.sh  shutdown.sh  system-setup.sh
robot/tools/usbreset/: usbreset
robot/web/db/: const.sql  sample.sql  setup.sql
robot/web/server/: server.js
(+190 files in other folders)
