<package format="2">
  <name>airbot_model</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for airbot</p>
    <p>This package contains configuration data, 3D models and launch files
for airbot robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>realsense_gazebo_plugin</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>realsense_gazebo_plugin</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
